<resources>
    <string name="app_name">E Train</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ChangeLanguage Item Login Activity -->
    <string name="tt_login">Login</string>
    <string name="tv_gmail">Enter your email</string>
    <string name="tv_pass">Enter your password</string>
    <string name="tt_register">Don\'t have any account?</string>
    <string name="tv_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="tt_languages">Select your language</string>
    <string name="tt_signup">Sign Up</string>
    <string name="tv_name">Enter your name</string>
    <string name="tv_phone">Enter your mobile phone</string>
    <string name="tv_pass_confirm">Confirm your password</string>
    <string name="tv_1">"I agree to the  "</string>
    <string name="TermofService">Term of Service</string>
    <string name="tv_2">" and "</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="tt_Alreadyamember">"Already a member?  "</string>
    <string name="ROUNDTRIP">ROUND TRIP</string>
    <string name="ONEWAY">ONE WAY</string>
    <string name="FROM">FROM</string>
    <string name="TO">TO</string>
    <string name="DEPARTUREDAY">DEPARTURE DAY</string>
    <string name="ARRIVALDAY">ARRIVAL DAY</string>
    <string name="Numberofpassenger">"Number of passenger: "</string>
    <string name="SearchTrain">Search Train</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="Callhotline">Call hotline for quick support</string>
    <string name="q1">1. Question:  How can I book a train ticket?</string>
    <string name="a1">Answer: To book a train ticket, you can use our application and follow the simple steps on the interface. Select the departure and destination, enter passenger information, and choose your preferred seat on the train station map.</string>
    <string name="q2">2. Question: I forgot my password, how can I recover it?</string>
    <string name="a2">Answer: To recover your password, you can use the \'Forgot Password\' option on the login screen. We will send recovery instructions to the email you have registered with.</string>
    <string name="q3">3. Question: How do I make payment for my booked tickets?</string>
    <string name="a3">Answer: You can make payment for your booked tickets using secure and convenient payment methods such as credit cards, debit cards, or electronic wallets.</string>
    <string name="tt_phone">Phone</string>
    <string name="tt_pass">Password</string>
    <string name="Logout">Logout</string>
    <string name="Home">Home</string>
    <string name="Ticket">Ticket</string>
    <string name="Profile">Profile</string>
    <string name="Pointanddiscount">Point and discount</string>
    <string name="Help">Help</string>
    <string name="Notification">Notification</string>
    <string name="Setting">Setting</string>
    <string name="btnChoose">Choose</string>
    <string name="ShareTrain">Share Train</string>
    <string name="STATIONMAP">STATION MAP</string>
    <string name="ViewEticket">View E-ticket</string>
    <string name="DepartureSelection">"Departure Selection: "</string>
    <string name="Notselect">Not select</string>
    <string name="ArrivalSelection">"Arrival Selection: "</string>
    <string name="CHOOSESEAT">CHOOSE SEAT</string>
    <string name="Choosingpassenger">Choosing seat number of passenger</string>
    <string name="Departure">"Departure: "</string>
    <string name="Arrival">"Arrival: "</string>
    <string name="Available">Available</string>
    <string name="Sold">Sold</string>
    <string name="CHOOSESERVICE">CHOOSE SERVICE</string>
    <string name="BOOK">BOOK</string>
    <string name="Destination">"Destination: "</string>
    <string name="View">VIEW</string>
    <string name="EDITCUSTOMER">EDIT CUSTOMER INFORMATION</string>
    <string name="total">"Total: "</string>
    <string name="Enteryouraddress">Enter your address</string>
    <string name="Choosepaymentoption">Choose payment option</string>
    <string name="Choosediscountvoucher">Choose discount voucher</string>
    <string name="CONFIRMPAYMENT">CONFIRM PAYMENT</string>
    <string name="Yourtotalpayment">Your total payment</string>
    <string name="dstotal">Total payment is the amount paid for seats on the train if the promotion is not received</string>
    <string name="Yourpoints">Your points</string>
    <string name="dsPoint">Points are converted from the total amount paid according to the formula for all system accounts</string>
    <string name="changePoint">Change your point to discount</string>
    <string name="PaymentSuccessful">Successful</string>
    <string name="dsPayment">Your ticket is booked successfully</string>
    <string name="ds2Payment">Please touch OK to book seat for next passenger</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Oldpassword">Old password</string>
    <string name="Newpassword">New password</string>
    <string name="CofirmPassword">Confirm password</string>
    <string name="Forgotpassword">Forgot password</string>
    <string name="Forgottenpassword">Forgotten password</string>
    <string name="dsEmailPass">Please enter your email then we will help you to recover your account</string>
    <string name="btn_Submit">Submit</string>
    <string name="tv_remember">I have remember my password </string>
    <string name="ChangePhoneNumber">Change Phone Number</string>
    <string name="Departure_i">DEPARTURE</string>
    <string name="DESTINATION_i">DESTINATION</string>
    <string name="Departure_time">"Departure time: "</string>
    <string name="DestinationTime">"Destination time: "</string>
    <string name="train">"Train: "</string>
    <string name="Passenger">"Passenger: "</string>
    <string name="Seatnumber">"Seat number: "</string>
    <string name="Servicename">"Service name: "</string>
    <string name="Discount">"Discount: "</string>
    <string name="TotalPayment">"Total Payment: "</string>
    <string name="Ticketcode">"Ticket code: "</string>
    <string name="dsPaymentTotal">"Your total money now is: "</string>
    <string name="allticketssuccessfully">Your all tickets are booked successfully</string>
    <string name="touchOK">Please touch OK to pay all your money and back to home</string>
    <string name="ticketforpassenger"> The ticket for passenger </string>
    <string name="isbookedsuccessfully1">  is booked successfully </string>
    <string name="touchOKfornextPassenger">Please touch OK to book for the next passenger</string>
    <string name="Arrival_i">ARRIVAL</string>
    <string name="TrainNotFound">There weren\'t any trains to be found</string>
    <string name="Cancel">CANCEL</string>

</resources>