<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/Home"/>

        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_nav_ticket"
            android:title="@string/Ticket"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/Profile"/>
        <item
            android:id="@+id/nav_point"
            android:icon="@drawable/ic_point_discount"
            android:title="@string/Pointanddiscount"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_support"
                android:title="@string/Help"/>
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications"
                android:title="@string/Notification"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_setting"
                android:title="@string/Setting"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_nav_logout"
                android:title="@string/Logout"/>
        </menu>
    </item>
</menu>