<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TrainSelectionFragment"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCompatReturn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/switch_thumb"
        app:track="@drawable/switch_track"
        app:showText="true"
        android:textOn="@string/Arrival_i"
        android:textOff="@string/Departure_i"/>

    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_numberTotalTrain"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TrainNotFound"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_TrainSelection"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DepartureSelection"/>
        <TextView
            android:id="@+id/tv_DepartureSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notselect"
            android:background="@drawable/textview_border"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ArrivalSelection"/>
        <TextView
            android:id="@+id/tv_ArrivalSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notselect"
            android:background="@drawable/textview_border"
            android:padding="10dp" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChooseSeat"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="2dp"
        app:cornerRadius="10dp"
        android:text="@string/CHOOSESEAT"
        android:textColor="@color/white"
        app:strokeColor="@color/orangeLess"
        />
</LinearLayout>