<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StationMapFragment"
    android:orientation="vertical"
    android:weightSum="5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Departure"
                />
            <TextView
                android:id="@+id/tv_DepartureStation"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notselect"
                android:background="@drawable/textview_border"
                android:padding="10dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_chooseDeparture"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                app:cornerRadius="10dp"
                android:text="@string/View"
                android:textColor="@color/black"
                app:strokeColor="@color/orange"
                android:layout_toRightOf="@+id/iv_imgSrc"
                android:layout_below="@+id/tv_description"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Destination"
                />
            <TextView
                android:id="@+id/tv_DestinationStation"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notselect"
                android:background="@drawable/textview_border"
                android:padding="10dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_chooseDestination"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="2dp"
                app:cornerRadius="10dp"
                android:text="@string/View"
                android:textColor="@color/black"
                app:strokeColor="@color/orange"
                android:layout_toRightOf="@+id/iv_imgSrc"
                android:layout_below="@+id/tv_description"
                />
        </LinearLayout>
    </LinearLayout>
    <fragment
        android:layout_weight="4"
        android:id="@+id/MY_MAP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="com.google.android.gms.maps.SupportMapFragment">
    </fragment>
</LinearLayout>